# ariel

./: .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  README.md  imgui.ini  main.cpp
AppDir/: ariel.desktop  test.chai
lib/: GlU32.Lib  desktop.ini  freeglut_staticd.lib  freeglutd.exp  freeglutd.lib  libsfml-graphics.so.2.3  libsfml-system.so.2.3  libsfml-window.so.2.3  libudev.so.1
scripts/tests/: test.js
snap/: snapcraft.yaml
src/: Ariel.hpp  NPC.hpp  animatedsprite.hpp  ariel.cpp  ariel.hpp  component.hpp  entity.cpp  entity.hpp  entitymanager.cpp  entitymanager.hpp  game.cpp  game.hpp  graphics.hpp  gui_test.hpp  imgui-SFML.cpp  main.cpp  menustate.cpp  menustate.hpp  rect.hpp  script.cpp  script.hpp  splash.cpp  sprite.hpp  state.cpp  state.hpp  statemanager.cpp  statemanager.hpp  vector2d.hpp
src/components/: SpriteConponent.hpp  TransformConponent.hpp
